# w3-schools

./: LICENSE  README.md  pyproject.toml  research_scraper.py  w3schools_tui.py
.github/workflows/: publish.yml
src/w3_schools/: main.py
