[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w3-schools"
version = "0.1.1"
authors = [
  { name="Termux Learner", email="learner@example.com" },
]
description = "A professional TUI for learning from W3Schools inside Termux."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
w3-schools = "w3_schools.main:run"
