[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w3-schools"
version = "0.1.2"
authors = [
  { name="kyle Votes", email="kylevotes@gmail.com" },
]
description = "A professional TUI for learning from W3Schools inside Termux."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Custom: Non-profit, Educational Use Only. No Reverse Engineering." }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Intended Audience :: Education",
]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
w3-schools = "w3_schools.main:run"
